--- a/style.css
+++ b/style.css
@@ -27,18 +27,18 @@ body {
     background-color: var(--cardBg);
     display: flex;
     flex-direction: column;
+    border-radius: 10px;
 }
 
 .card__image-container{
     width: 100%;
-    background-color: var(--accent);
 }
 
 .card__image-mobile {
     width: 100%;
-    opacity: 0.4;
-    filter: brightness(1.2) contrast(1.80);
-    
+    opacity: 0.7;
+    filter: invert(0%) sepia(7%) saturate(4000%) hue-rotate(245deg) brightness(92%) contrast(80%);
+    border-radius: 10px 10px 0px 0px;
 }
 
 .card__image-desktop {
@@ -50,21 +50,115 @@ body {
     flex-direction: column;
     text-align: center;
     justify-content: space-evenly;
+    padding: 20px 50px;
+}
+
+.card__content-text {
+    padding-bottom: 20px;
+}
+
+.card__content-stats {
+    display: flex;
+    flex-direction: column;
 }
 
 h2 {
     font-family: var(--fontInter);
     color: var(--mainHead);
     font-weight: 700;
+    font-size: 27px;
 }
 
 p {
     font-family: var(--fontLexend);
     color: var(--mainPara);
     font-size: 13px;
+    line-height: 25px;
+}
+
+.insights {
+    color: var(--accent);
+}
+
+.stat__number {
+    font-family: var(--fontInter);
+    color: var(--mainHead);
+    font-weight: 700;
+    font-size: 25px;
 }
 
 /*QUERIES*/
-@media screen {
+@media screen and (min-width: 800px) {
+
+    .card {
+        width: 70%;
+        background-color: var(--cardBg);
+        display: flex;
+        flex-direction: row-reverse;
+        border-radius: 10px;
+    }
+
+    .card__image-container{
+        width: 50%;
+    }
+
+    .card__image-desktop {
+        display: flex;
+        width: 100%;
+        opacity: 0.7;
+        filter: invert(0%) sepia(7%) saturate(4000%) hue-rotate(245deg) brightness(92%) contrast(80%);
+        border-radius: 0px 10px 10px 0px;
+    }
+
+    .card__image-mobile {
+        display: none;
+    }
+
+    .card__content {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        justify-content: space-evenly;
+        padding: 20px 50px;
+        box-sizing: border-box;
+    }
+
+    .card__content-text {
+        width: 90%;
+    }
+
+    .card__content-stats {
+        width: 90%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    h2 {
+        font-family: var(--fontInter);
+        color: var(--mainHead);
+        font-weight: 700;
+        font-size: 30px;
+    }
     
+    p {
+        font-family: var(--fontLexend);
+        color: var(--mainPara);
+        font-size: 16px;
+        line-height: 25px;
+    }
+    
+    .insights {
+        color: var(--accent);
+    }
+    
+    .stat__number {
+        font-family: var(--fontInter);
+        color: var(--mainHead);
+        font-weight: 700;
+        font-size: 28px;
+    }
+
+   
 }
